# ai-agent-dev-team-sdk

./: .env.example  CLAUDE.md  Customer_Requirements_Document_AI-Agent-System.md  ITDS-001_Agent-Dev-Team-SDK.md  ITDS-001_Template.md  README.md  part1_phase3_code-preparator_Core-Foundation-Infrastructure_CODEBASE_ANALYSIS.md  part1_phase3_code-preparator_Core-Foundation-Infrastructure_DATABASE_SCHEMA.md  part1_phase3_code-preparator_Core-Foundation-Infrastructure_DEPENDENCIES.md  part1_phase3_code-preparator_Core-Foundation-Infrastructure_REQUIREMENTS.md  project-decomposition-roadmap.md  project_manifest.yaml  pyproject.toml  test_config.py  test_report.json
.claude/agents/: BackEndCoder.md  CodePreperator.md  DevOpsAgent.md  FrontEndAgent.md  KnowledgeManagerAgent.md  ProductOwnerAgent.md  ProjectPlannerAgent.md  QA-Agent.md  TeamleaderAgent.md  exa-search-agent.md  perplexity-search-agent.md  ref-search-agent.md
Agents/: BackEndCoder.md  CodeBaseAnalyzer.md  FrontEndAgent.md  GeneralPurposeAgent.md  ResearchAgent.md  ScopeGuardianAgent.md  SecurityAgent.md  SoftwareArchitect.md  TeamleaderAgent_Programmatic.md  UI-UX-Designer.md  documentation-master.md  exa-search-agent.md  perplexity-search-agent.md  ref-search-agent.md
KnowledgeManagement/: Part1_Phase5_Restart_Authentic_Implementation_Strategies_Advanced_AI_Research.md  Part1_Phase7_QA_Testing_Configuration_Unknowns.md  Phase0_exa-search-agent_project-initialization.md  Phase0_research-agent_project-initialization_comprehensive-analysis.md  ProjectPlannerAgent_project-decomposition_part0_phase0.md  ScopeGuardian_final-blueprint-approval_part0_phase0.md  ScopeGuardian_project-decomposition-validation_part0_phase0.md  part0_phase0_productowner_ITDS-001-completion.md  part0_phase0_productowner_ITDS-001-template_unknowns.md  part0_phase1_perplexity-search-agent_AI-Research-Project-Initialization.md  part1_phase1_perplexity-search-agent_Core-Foundation-Infrastructure-Advanced-AI-Research.md  part1_phase1_research-agent_Core-Foundation-Infrastructure_Actionable-Report.md  part1_phase2_software-architect-agent_Core-Foundation-Infrastructure_Implementation-Plan.md  part1_phase3_code-preparator_Core-Foundation-Infrastructure_API_SPECS.md  part1_phase3_code-preparator_Core-Foundation-Infrastructure_ARCHITECTURE.md  part1_phase3_code-preparator_Core-Foundation-Infrastructure_CONTEXT_ANOMALIES.md  part1_phase4_scope-guardian_Core-Foundation-Infrastructure_Scope-Validation.md  part1_phase4_scopeguardian_scope_validation_unknowns.md  part1_phase4_security-agent_Core-Foundation-Infrastructure_Security-Assessment.md  part1_phase5_backend_BackEnd-Agent_Core-Foundation-Infrastructure_implementation-summary.md  part1_phase5_devops_DevOps-Infrastructure_implementation_unknowns.md  part1_phase5_frontend_FrontEndAgent_frontend-implementation-summary.md  part1_phase5_frontend_FrontEndAgent_frontend-implementation_unknowns.md  part1_phase5_frontend_TeamLeader_technology-stack-decisions.md  part1_phase7_qa-agent_comprehensive-testing_unknowns.md  part4_phase5_devops_production-infrastructure_analysis.md  part4_phase5_devops_production-infrastructure_unknowns.md  part5_phase5_backend_implementation_summary.md  part5_restart_exa-search-agent_mock-free-research.md  part_0_ref-search-agent_project_initialization.md  part_1_phase_1_exa-search-agent_core-foundation-infrastructure-research.md  part_1_ref-search-agent_Part1_CoreFoundationInfrastructure_reference-research.md  part_phase5_ref-search-agent_production-implementation-patterns.md  phase5_backend_implementation_completion.md  phase5_backend_mock_elimination_analysis.md
config/: mcp_servers.yaml  team_leader.yaml
frontend/: .env.development  .env.production  .eslintrc.js  .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: AgentMonitor.tsx  Dashboard.tsx  Login.tsx  SystemConfig.tsx  TaskManager.tsx
frontend/src/services/: agentService.ts  index.ts  systemService.ts  taskService.ts
frontend/src/stores/: index.ts  useAgentStore.ts  useAuthStore.ts  useSystemStore.ts  useTaskStore.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: agent.ts  api.ts  index.ts  ui.ts
frontend/src/utils/: apiClient.ts  constants.ts  index.ts  tokenStorage.ts  websocket.ts
src/ai_agent_sdk/: __init__.py
src/ai_agent_sdk/agents/: __init__.py  base_agent.py  (+4 more)
system_prompts/: backend_coder.md  codebase_analyzer.md  frontend_coder.md
test_prompts/: research_agent.md  team_leader.md
tests/: comprehensive_test_suite.py
(+12 files in other folders)
